[gd_scene load_steps=8 format=3 uid="uid://vm700jq68pjs"]

[ext_resource type="Script" uid="uid://co6b8fofsh8iv" path="res://src/projectiles/visuals/weapons/shotgun_special_pellet_visual.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dwek2ej8a0kxy" path="res://assets/images/Bullets/Shotgun_Special.png" id="2"]
[ext_resource type="Shader" uid="uid://d08hxd1am20uf" path="res://src/projectiles/shaders/smg_glow.gdshader" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hyfii"]
shader = ExtResource("3")
shader_parameter/glow_color = Color(1, 0.2, 0, 1)
shader_parameter/glow_intensity = 0.4562217841589578
shader_parameter/glow_size = 0.006843326762384367

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fire"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.8
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, 98, 0)
color = Color(1, 0.4, 0, 0.8)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sparks"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
initial_velocity_min = 50.0
initial_velocity_max = 80.0
gravity = Vector3(0, 98, 0)
color = Color(1, 0.8, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ly243"]
radius = 11.18034

[node name="ShotgunSpecialPelletVisual" type="Node2D"]
script = ExtResource("1")

[node name="BulletSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.74, 0.32, 1)
texture_filter = 2
material = SubResource("ShaderMaterial_hyfii")
position = Vector2(-0.4999989, -0.49999976)
scale = Vector2(0.11328125, 0.11328125)
texture = ExtResource("2")

[node name="FireParticles" type="GPUParticles2D" parent="."]
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_fire")

[node name="SparkParticles" type="GPUParticles2D" parent="."]
amount = 12
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_sparks")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ly243")
